# pair-programmer

./: .env  .gitignore  README.md  docker-compose.yml  models.json  scripts
cli/: .gitignore  input.ts  package-lock.json  package.json
cli/src/: agent.ts  bedrock-client.ts  config.ts  debug-keys.ts  global.d.ts  input.ts  key-handlers.ts  logger.ts  main.ts  markdown.ts  model-picker.ts  persist.ts  settings-picker.ts  system-prompt.ts  tools.ts  vscode-diff.ts
cli/src/tools/: analyze_media.ts  bash.ts  list_files.ts  read_file.ts  search_files.ts  tools.ts  web.ts  write_file.ts
llamacpp/: Dockerfile  Dockerfile.quantize  quantize.sh
llm/: Dockerfile  Dockerfile.sglang  Dockerfile.vllm  NOTES.md  pyproject.toml
llm/src/: __main__.py  config.py  dependencies.py  model.py  server.py
llm/tests/: conftest.py  test_model.py  test_server.py
vllm/: Dockerfile.smolvlm2
vscode-extension/: LICENSE  README.md  package-lock.json  package.json  pair-programmer-context-0.0.1.vsix
vscode-extension/src/: extension.ts
