[project]
name = "llm-service"
version = "0.1.0"
description = "LLM service using Qwen2.5-3B-Instruct for chat completions"
requires-python = ">=3.10"

# Note: torch/torchvision/torchaudio are provided by the NVIDIA base image
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.0.0",

    # ML dependencies
    "transformers>=4.51.0",
    "accelerate>=1.0.0",

    # Utilities
    "watchdog>=6.0.0",
]

[project.optional-dependencies]
# Testing dependencies
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
]

# All dependencies
all = [
    "llm-service[test]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
